plugins/keynotification: Fix event ID for notification

BUG: 495264


(cherry picked from commit b786c7e930ed15fa3a372c8a883d872ec4050e77)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>